samples/_failures_safe/1761303509_7784e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b1ec05c.c: In function ‘main’:
./samples/SAFE/__tmp_9b1ec05c.c:161:5: error: expected expression at end of input
  161 |     if (scanf("%d",
      |     ^~
./samples/SAFE/__tmp_9b1ec05c.c:161:5: error: expected declaration or statement at end of input
